@@ -312,6 +312,15 @@ class RangeTest(unittest.TestCase):
 
         self.assertRaises(TypeError, range, IN())
 
+        # Test use of user-defined classes in slice indices.
+        self.assertEqual(list(range(10)[:I(5)]), list(range(5)))
+
+        with self.assertRaises(RuntimeError):
+            range(0, 10)[:IX()]
+
+        with self.assertRaises(TypeError):
+            range(0, 10)[:IN()]
+
     def test_count(self):
         self.assertEqual(range(3).count(-1), 0)
         self.assertEqual(range(3).count(0), 1)
