@@ -330,11 +330,11 @@ compute_slice_element(PyObject *obj)
         if (PyIndex_Check(obj)) {
             result = PyNumber_Index(obj);
         }
-    }
-    if (result == NULL) {
-        PyErr_SetString(PyExc_TypeError,
-                        "slice indices must be integers or "
-                        "None or have an __index__ method");
+        else {
+            PyErr_SetString(PyExc_TypeError,
+                            "slice indices must be integers or "
+                            "None or have an __index__ method");
+        }
     }
     return result;
 }
